--- a/2.priklad/index.html
+++ b/2.priklad/index.html
@@ -10,8 +10,8 @@
 <body>
     <p class="odd">Number 1- Im a class!</p>
     <div id="number2">Number 2 - Iam one ID</div>
-     <p id="number3 " >Number 3 - Iam a class,but cooler!</p>
-    <div id="number4">Number 4 - IAM another ID.</div>
+     <p class="odd  adjust-font-size" >Number 3 - Iam a class,but cooler!</p>
+    <div id="number4" class=" adjust-font-size">Number 4 - IAM another ID.</div>
     <p class="odd">Number 5 - Iam class</p>
 </body>
 </html>
