--- a/5.priklad/index.html
+++ b/5.priklad/index.html
@@ -8,10 +8,14 @@
     <link rel="stylesheet" href="/5.priklad/style.css">
 </head>
 <body>
-    <div><p>This should be styled</p></div>
-    <p>This should be unstyled</p>
-    <p>This should be unstyled</p>
-    <div><p>This should be styled</p></div>
-    <div><p>This should be styled</p></div>
+       <div class="container">
+        <p class="text">This should be styled.</p>
+      </div>
+        <p class="text">This should be unstyled.</p>
+        <p class="text">This should be unstyled.</p>
+      <div class="container">
+        <p class="text">This should be styled.</p>
+        <p class="text">This should be styled.</p>
+      </div>
 </body>
 </html>
